# Fake8080

./: CMakeLists.txt
include/: BitsUtilities.hpp  CPU.hpp  Fake8080.hpp  OpcodesCycles.hpp  Registers.hpp
src/: CPU.cpp  Fake8080.cpp  Registers.cpp
test/: ADD_ADC_SUB_SBB_CMP_Test.cpp  ADD_ADC_SUB_SBB_M_Test.cpp  ADI_ACI_SUI_SBI_CPI_Test.cpp  ANA_ORA_XRA_M_Test.cpp  ANA_ORA_XRA_Test.cpp  ANI_ORI_XRI_Test.cpp  ArithmeticOperationTest.cpp  CPUFlagsTest.cpp  DAD_Test.cpp  INR_DCR_M_Test.cpp  INR_DCR_Test.cpp  INX_DCX_Test.cpp  LDAX_LDA_Test.cpp  LHLD_Test.cpp  LXI_Test.cpp  MOV_M_R_Test.cpp  MOV_R_M_Test.cpp  MOV_Test.cpp  MVI_Test.cpp  PUSH_POP_Test.cpp  RLC_RAL_Test.cpp  RRC_RAR_Test.cpp  RegistersTest.cpp  SHLD_Test.cpp  STAX_STA_Test.cpp  STC_CMA_CMC_DAA_Test.cpp  XCHG_Test.cpp  XTHL_Test.cpp
test/commons/: CPUTest.hpp
